# jacobcdsmith.github.io

./: .gitattributes  .gitignore  .replit  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  replit.md  script.js  style.css  vite.config.js
.github/workflows/: deploy.yml
attached_assets/: 01_Overview_and_Statistics_1777770283871.ipynb  02_Temporal_Analysis_1777770283871.ipynb  03_Topic_Analysis_1777770283871.ipynb  04_Conversation_Patterns_1777770283868.ipynb  05_Categorization_and_Rating_1777770283870.ipynb  COMPLETE_PATENT_APPLICATION_READY_TO_FILE_1777770637961.md  Compression-Causality-Reasoning_1777770646779.md  HYSTERETIC_COMPUTING_IP_1777770636110.md  Hybrid_Intelligence_Systems_1777770627933.docx  Multicomputational_Phase_Transitions_in_Quantum-Cl_1777770633729.md  README_1777770283871.md  branding-1777727877888.json  branding-1777727899420.json  chatgpt_conversations_dataframe_1777770283870.csv  conversations_1777770283870.json  logoHref.html  operationalized_section_8_multicomputation_1777770643296.md  requirements_1777770283871.txt
blog/: posts.json
blog/posts/: building-local-first-ai.md  consciousness-as-spectral-filter.md  embedded-agents-on-the-edge.md  peace-as-voltage.md
public/: llms.txt
scripts/: generate-blog-pages.mjs
scripts/book/: README.md  build_book.py  cluster.py  parse.py  redact.py  redact_terms.txt  requirements.txt  typeset.py
src/: App.jsx  main.jsx  style.css
src/components/: AgentGatewaySchematic.jsx  Button.jsx  CTABanner.jsx  CVDownload.jsx  FAQ.jsx  Footer.jsx  GitHubActivity.jsx  SEO.jsx  (+10 more)
(+20 files in other folders)
