# Python deps for the Monologue Compilation Book pipeline (scripts/book/).
# The site itself is React/Vite (see package.json); this file exists only so
# Replit's package manager can resolve the Python toolchain used by
# `npm run build:book`.  The canonical, human-edited list lives in
# `scripts/book/requirements.txt`.
[project]
name = "jacobcdsmith-portfolio-book-pipeline"
version = "0.1.0"
description = "Python deps for the Monologue Compilation Book PDF pipeline."
requires-python = ">=3.11"
dependencies = [
    "nltk>=3.8.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0",
    "reportlab>=4.0.0",
    "scikit-learn>=1.3.0",
]
